# SQL_Analysis

./: 1- Vendas por ano mês.sql  2- Lojas com maiores vendas.sql  3- Acumulado de vendas por loja.sql  Curva ABC.sql  README.md  main.ipynb  pyproject.toml
